@@ -1,6 +1,5 @@
 package j2q.core;
 
-import com.google.common.base.Joiner;
 import org.apache.commons.collections4.CollectionUtils;
 
 import javax.annotation.Nonnull;
@@ -8,7 +7,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static j2q.commons.CommonMethods.stringsConcat;
 
 final class InValuesWhere extends AbstractWhere {
     @Override TypeOfWhere getTypeOfWhere() { return TypeOfWhere.WhereInValues; }
@@ -27,8 +25,8 @@ final class InValuesWhere extends AbstractWhere {
             List<String> newInValues = this.inValues.stream()
                     .filter(Objects::nonNull)
                     .map(o -> LInSQLBuilderShared.getSqlUserSelection(o, super.getInQuotesRequirement()).getResolveObjectForSQL(forSQLRetrieverForDB))
-                    .collect(Collectors.toList());
-            String valuesJoined = stringsConcat(true, Joiner.on(", ").join(newInValues));
+                    .toList();
+            String valuesJoined = newInValues.stream().collect(Collectors.joining(", ", "(", ")"));
             returnValue.append(valuesJoined);
         }
         returnValue.append(super.resolveAttachedFilters(forSQLRetrieverForDB));
